# rs_aruco_detection

./: .clang-format  CMakeLists.txt  README.md  package.xml
config/: markers_configuration.yaml  rosconsole.conf  rs_calib.yaml  rs_calib_params.txt  rs_calibration_parameters.yaml
include/rs_aruco_detection/: ArucoPosition.h  aruco_marker_position.h
launch/: suministra_aruco_marker_position.launch
src/: ArucoPosition.cpp  aruco_detector.cpp  aruco_marker_position.cpp
utils/: rs_aruco_position.cpp
